--- a/app/src/main/res/layout/fragment_sign_up_page2_driver.xml
+++ b/app/src/main/res/layout/fragment_sign_up_page2_driver.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.rider.SignUpFragmentRider">
+    tools:context=".ui.auth.SignUpPage2Driver">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:text="Welcome to signup page2 abdo" />
 
 </FrameLayout>
