--- a/app/src/main/res/navigation/nav_rider.xml
+++ b/app/src/main/res/navigation/nav_rider.xml
@@ -9,5 +9,67 @@
         android:id="@+id/homeRiderFragment"
         android:name="com.theideal.goride.ui.rider.HomeRiderFragment"
         android:label="fragment_home_rider"
-        tools:layout="@layout/fragment_home_rider" />
+        tools:layout="@layout/fragment_home_rider" >
+        <action
+            android:id="@+id/action_homeRiderFragment_to_servicesFragment"
+            app:destination="@id/servicesFragment" />
+        <action
+            android:id="@+id/action_homeRiderFragment_to_servicesFragment2"
+            app:destination="@id/servicesFragment" />
+        <action
+            android:id="@+id/action_homeRiderFragment_to_profileFragment"
+            app:destination="@id/profileFragment" />
+        <action
+            android:id="@+id/action_homeRiderFragment_to_availableTripFragment"
+            app:destination="@id/availableTripFragment" />
+        <action
+            android:id="@+id/action_homeRiderFragment_to_errorFragment"
+            app:destination="@id/errorFragment" />
+        <action
+            android:id="@+id/action_homeRiderFragment_to_tripSuggestionsFragment"
+            app:destination="@id/tripSuggestionsFragment" />
+        <action
+            android:id="@+id/action_homeRiderFragment_to_rideRequestFragment"
+            app:destination="@id/rideRequestFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/profileFragment"
+        android:name="com.theideal.goride.ui.rider.ProfileFragment"
+        android:label="fragment_profile"
+        tools:layout="@layout/fragment_profile" >
+        <action
+            android:id="@+id/action_profileFragment_to_homeRiderFragment"
+            app:destination="@id/homeRiderFragment" />
+        <action
+            android:id="@+id/action_profileFragment_to_servicesFragment"
+            app:destination="@id/servicesFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/servicesFragment"
+        android:name="com.theideal.goride.ui.rider.ServicesFragment"
+        android:label="fragment_services"
+        tools:layout="@layout/fragment_services" >
+        <action
+            android:id="@+id/action_servicesFragment_to_profileFragment"
+            app:destination="@id/profileFragment" />
+        <action
+            android:id="@+id/action_servicesFragment_to_homeRiderFragment"
+            app:destination="@id/homeRiderFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/errorFragment"
+        android:name="com.theideal.goride.ui.rider.home.services.ErrorFragment"
+        android:label="ErrorFragment" />
+    <fragment
+        android:id="@+id/tripSuggestionsFragment"
+        android:name="com.theideal.goride.ui.rider.home.services.TripSuggestionsFragment"
+        android:label="TripSuggestionsFragment" />
+    <fragment
+        android:id="@+id/rideRequestFragment"
+        android:name="com.theideal.goride.ui.rider.home.services.RideRequestFragment"
+        android:label="RideRequestFragment" />
+    <fragment
+        android:id="@+id/availableTripFragment"
+        android:name="com.theideal.goride.ui.rider.home.services.AvailableTripFragment"
+        android:label="AvailableTripFragment" />
 </navigation>
