--- a/app/src/main/res/layout/activity_authentication.xml
+++ b/app/src/main/res/layout/activity_authentication.xml
@@ -13,6 +13,6 @@
         android:layout_height="match_parent"
         app:defaultNavHost="true"
         app:navGraph="@navigation/nav_auth"
-        />
+        tools:layout="@layout/fragment_signin" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
