--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -10,7 +10,7 @@
             type="com.theideal.goride.model.User" />
         <variable
             name="viewModel"
-            type="com.theideal.goride.viewmodel.AuthenticationViewModel" />
+            type="com.theideal.goride.viewmodel.auth.AuthenticationViewModel" />
 
     </data>
 
@@ -202,7 +202,7 @@
             android:text="@string/sign_up"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:onClick="@{() -> viewModel.createAnAccount(user)}"
+            android:onClick="@{() -> viewModel.showDialog()}"
             app:layout_constraintTop_toBottomOf="@+id/tv_terms_and_conditions"
             />
 
