--- a/app/src/main/res/layout/fragment_signin.xml
+++ b/app/src/main/res/layout/fragment_signin.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.theideal.goride.viewmodel.AuthenticationViewModel" />
+            type="com.theideal.goride.viewmodel.auth.AuthenticationViewModel" />
 
         <variable
             name="user"
