--- a/app/src/main/res/layout/activity_home_rider.xml
+++ b/app/src/main/res/layout/activity_home_rider.xml
@@ -10,7 +10,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.rider.HomeRiderActivity">
+        tools:context=".ui.rider.RiderActivity">
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/container"
