--- a/app/src/main/res/layout/activity_home_driver.xml
+++ b/app/src/main/res/layout/activity_home_driver.xml
@@ -4,6 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.driver.HomeDriverActivity">
+    tools:context=".ui.driver.DriverActivity">
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="0dp"
+        android:textSize="24sp"
+        android:gravity="center"
+        android:text="Welcome From driver"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
