--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -10,7 +10,7 @@
             type="com.theideal.goride.model.User" />
         <variable
             name="viewModel"
-            type="com.theideal.goride.viewmodel.auth.AuthenticationViewModel" />
+            type="com.theideal.goride.ui.auth.AuthenticationViewModel" />
 
     </data>
 
