--- a/app/src/main/res/layout/card_home_rider.xml
+++ b/app/src/main/res/layout/card_home_rider.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="viewModel"
-            type="com.theideal.goride.viewmodel.rider.RiderViewModel" />
+            type="com.theideal.goride.ui.rider.RiderViewModel" />
 
 
     </data>
