--- a/app/src/main/res/layout/fragment_sign_up_page2_driver.xml
+++ b/app/src/main/res/layout/fragment_sign_up_page2_driver.xml
@@ -1,14 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.auth.SignUpPage2Driver">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <data>
+
+        <variable
+            name="driver"
+            type="com.theideal.goride.model.Driver" />
+
+        <variable
+            name="user"
+            type="com.theideal.goride.model.User" />
+
+        <variable
+            name="viewModel"
+            type="com.theideal.goride.ui.auth.AuthenticationViewModel" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Welcome to signup page2 abdo" />
+        tools:context=".ui.auth.SignUpPage2Driver">
 
-</FrameLayout>
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="325dp"
+            android:onClick="@{() -> viewModel.singUpDriverComplete(user, driver)}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
