--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -29,6 +29,9 @@
             android:layout_marginEnd="5dp"
             android:gravity="center"
             android:hint="@string/first_name"
+            app:helperText="@{viewModel.firstName}"
+            app:helperTextEnabled="true"
+            app:helperTextTextColor="@color/red"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -49,6 +52,9 @@
             android:layout_margin="5dp"
             android:gravity="center"
             android:hint="@string/last_name"
+            app:helperText="@{viewModel.lastName}"
+            app:helperTextEnabled="true"
+            app:helperTextTextColor="@color/red"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/et_first_name">
@@ -69,6 +75,9 @@
             android:layout_margin="5dp"
             android:gravity="center"
             android:hint="@string/email"
+            app:helperText="@{viewModel.emailHelper}"
+            app:helperTextEnabled="true"
+            app:helperTextTextColor="@color/red"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/et_last_name"
@@ -90,6 +99,9 @@
             android:layout_margin="5dp"
             android:gravity="center"
             android:hint="@string/password"
+            app:helperText="@{viewModel.passwordHelper}"
+            app:helperTextEnabled="true"
+            app:helperTextTextColor="@color/red"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/et_email"
@@ -112,10 +124,11 @@
             android:layout_margin="5dp"
             android:gravity="center"
             android:hint="@string/phone"
+            app:helperText="@{viewModel.phoneNumber}"
             app:counterEnabled="true"
-            app:counterMaxLength="11"
-            app:helperText="01012345678"
             app:helperTextEnabled="true"
+            app:helperTextTextColor="@color/red"
+            app:counterMaxLength="11"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/et_password"
@@ -136,9 +149,10 @@
             android:layout_margin="5dp"
             android:gravity="center"
             android:hint="@string/age"
-            app:helperTextEnabled="true"
-            app:helperText="@string/age_helper"
+            app:helperText="@{viewModel.age}"
             app:counterEnabled="true"
+            app:helperTextTextColor="@color/red"
+            app:helperTextEnabled="true"
             app:counterMaxLength="2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -168,6 +182,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/male"
+                android:checked="true"
                 android:drawableStart="@drawable/vc_man"
                 android:layout_margin="5dp"
                 />
@@ -202,7 +217,7 @@
             android:text="@string/sign_up"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:onClick="@{() -> viewModel.showDialog()}"
+            android:onClick="@{() -> viewModel.validateText(user) ? viewModel.showDialog() : null}"
             app:layout_constraintTop_toBottomOf="@+id/tv_terms_and_conditions"
             />
 
