--- a/app/src/main/res/layout/fragment_signin.xml
+++ b/app/src/main/res/layout/fragment_signin.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -13,13 +12,14 @@
             name="user"
             type="com.theideal.goride.model.User" />
 
-        <import type="android.view.View"/>
+        <import type="android.view.View" />
 
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/et_email_sign_in"
             style="?attr/textInputOutlinedStyle"
@@ -28,28 +28,30 @@
             android:layout_marginTop="100dp"
             android:gravity="center"
             android:hint="@string/email"
+            app:errorEnabled="true"
+            app:helperText="@{viewModel.emailHelper}"
+            app:helperTextEnabled="true"
+            app:helperTextTextColor="@color/red"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:helperTextEnabled="true"
-            app:helperText="@{viewModel.emailHelper}"
-            app:helperTextTextColor="@color/red"
             app:startIconDrawable="@drawable/vc_email">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"
                 android:text="@={user.email}" />
         </com.google.android.material.textfield.TextInputLayout>
+
         <ProgressBar
+            android:id="@+id/progress_bar_sign_in"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="@{viewModel.progressBar ? View.VISIBLE : View.GONE}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:id="@+id/progress_bar_sign_in"
-            android:visibility="@{viewModel.progressBar ? View.VISIBLE : View.GONE}"
-            app:layout_constraintTop_toBottomOf="@id/et_email_sign_in"
-            />
+            app:layout_constraintTop_toBottomOf="@id/et_email_sign_in" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/et_password_sign_in"
@@ -60,12 +62,12 @@
             android:gravity="center"
             android:hint="@string/password"
             app:endIconMode="password_toggle"
+            app:helperText="@{viewModel.passwordHelper}"
+            app:helperTextEnabled="true"
+            app:helperTextTextColor="@color/red"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/et_email_sign_in"
-            app:helperTextEnabled="true"
-            app:helperText="@{viewModel.passwordHelper}"
-            app:helperTextTextColor="@color/red"
             app:startIconDrawable="@drawable/vc_lock">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -82,21 +84,23 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:onClick="@{() -> viewModel.signIn(user)}"
+            android:onClick="@{() -> viewModel.validateEmailAndPassword(user) ? viewModel.signIn(user) : null}"
             android:text="@string/sign_in"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/et_password_sign_in" />
+            app:layout_constraintTop_toBottomOf="@+id/et_password_sign_in"
+            />
+
         <TextView
+            android:id="@+id/tv_forget_password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_top_forget_password"
+            android:onClick="@{() -> viewModel.navToForgetPassword()}"
+            android:text="@string/forget_password"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btn_sign_in"
-            android:onClick="@{() -> viewModel.navToForgetPassword()}"
-            android:text="@string/forget_password"
-            android:id="@+id/tv_forget_password"
-            android:layout_marginTop="@dimen/margin_top_forget_password"
 
             />
 
@@ -113,22 +117,22 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_forget_password" />
 
-<!--        <com.google.android.gms.common.SignInButton-->
-<!--            android:id="@+id/btn_sign_in_with_google"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/btn_sign_up" />-->
-<!--        <com.facebook.login.widget.LoginButton-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/btn_sign_in_with_google"-->
-<!--            android:id="@+id/btn_sign_in_with_facebook"-->
-<!--            android:layout_margin="16dp"-->
-<!--            />-->
+        <!--        <com.google.android.gms.common.SignInButton-->
+        <!--            android:id="@+id/btn_sign_in_with_google"-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            app:layout_constraintEnd_toEndOf="parent"-->
+        <!--            app:layout_constraintStart_toStartOf="parent"-->
+        <!--            app:layout_constraintTop_toBottomOf="@+id/btn_sign_up" />-->
+        <!--        <com.facebook.login.widget.LoginButton-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            app:layout_constraintEnd_toEndOf="parent"-->
+        <!--            app:layout_constraintStart_toStartOf="parent"-->
+        <!--            app:layout_constraintTop_toBottomOf="@+id/btn_sign_in_with_google"-->
+        <!--            android:id="@+id/btn_sign_in_with_facebook"-->
+        <!--            android:layout_margin="16dp"-->
+        <!--            />-->
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
